[package]
name = "shellexpand"
version = "2.0.0"
authors = ["Vladimir Matveev <vmatveev@citrine.cc>"]
license = "MIT/Apache-2.0"
description = "Shell-like expansions in strings"
repository = "https://github.com/netvl/shellexpand"
documentation = "http://docs.rs/shellexpand/"
readme = "Readme.md"
keywords = ["strings", "shell", "variables"]
edition = "2018"

[dependencies]
dirs = "2.0"

[target.'cfg(all(unix, not(target_os = "redox")))'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "redox")'.dependencies]
redox_users = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[features]
default = ["libc"]

