[package]
name = "shellexpand"
version = "2.0.0"
authors = ["Vladimir Matveev <vmatveev@citrine.cc>"]
license = "MIT/Apache-2.0"
description = "Shell-like expansions in strings"
repository = "https://github.com/netvl/shellexpand"
documentation = "http://docs.rs/shellexpand/"
readme = "Readme.md"
keywords = ["strings", "shell", "variables"]
edition = "2018"

# nix
[target.'cfg(all(unix, not(target_os = "redox")))'.dependencies]
libc = { version = "0.2", optional = true }

# redox
[target.'cfg(target_os = "redox")'.dependencies]
redox_users = "0.3"

# windows
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "handleapi", "processthreadsapi", "psapi", "securitybaseapi", "userenv", "winbase", "winerror"] }

[dev-dependencies]
dirs = "2.0"

[features]
default = ["libc"]


