[package]
name = "shellexpand"
version = "2.0.0"
authors = ["Vladimir Matveev <vmatveev@citrine.cc>"]
license = "MIT/Apache-2.0"
description = "Shell-like expansions in strings"
repository = "https://github.com/netvl/shellexpand"
documentation = "http://docs.rs/shellexpand/"
readme = "Readme.md"
keywords = ["strings", "shell", "variables"]

[dependencies]
dirs-next = "2.0"
